--- a/index.html
+++ b/index.html
@@ -7,35 +7,100 @@
 		<title>Project</title>
 	</head>
 	<body>
-		<header>
-			<div class="logo">
-				<img src="img/git.svg" alt="logo" />
-				<div class="logo-text">
-					<span>mang-io</span>
+		<div class="layout">
+			<header>
+				<div class="logo">
+					<img src="img/git.svg" alt="logo" />
+					<div class="logo-text">
+						<span>mang-io</span>
+					</div>
 				</div>
-			</div>
-			<div class="search">
-				<input type="search" name="header-search" id="header-search" />
-			</div>
-			<div class="user-panel">
-				<button class="toggle-nav" id="toggle-nav">
-					<svg class="icon">
-						<use xlink:href="/img/grid.svg#grid" />
-					</svg>
-				</button>
-				<nav id="nav">
-					<a href="#">Settings</a>
-					<a href="#">Profile</a>
-					<a href="#">Projects</a>
-					<a href="#">Network</a>
-				</nav>
-				<div class="user-panel-img">
-					<img src="img/16.jpg" alt="user-image" />
+				<div class="search">
+					<button class="toggle-search" id="toggle-search">
+						<svg>
+							<use xlink:href="/img/search.svg#search" />
+						</svg>
+					</button>
+					<input type="search" name="header-search" id="header-search" />
 				</div>
-			</div>
-		</header>
-		<main>MAIN</main>
-		<footer>FOOTER</footer>
+				<div class="user-panel">
+					<button class="toggle-nav" id="toggle-nav">
+						<svg>
+							<use xlink:href="/img/grid.svg#grid" />
+						</svg>
+					</button>
+					<nav id="nav">
+						<a href="#">Settings</a>
+						<a href="#">Profile</a>
+						<a href="#">Projects</a>
+						<a href="#">Network</a>
+					</nav>
+					<div class="user-panel-img">
+						<img src="img/16.jpg" alt="user-image" />
+					</div>
+				</div>
+			</header>
+			<main>
+				<div class="main-content">
+					<h1>Main</h1>
+					<div class="list-box">
+						<ul class="list-box__list">
+							<li class="list-box__list-item">
+								<div class="icon">
+									<img src="img/git.svg" alt="status icon" />
+								</div>
+								<a href="#item1" class="main-link">Item Link</a>
+								<div class="end-links">
+									<a href="#1">1</a>
+									<a href="#2">2</a>
+								</div>
+							</li>
+							<li class="list-box__list-item">
+								<div class="icon">
+									<img src="img/git.svg" alt="status icon" />
+								</div>
+								<a href="#item1" class="main-link">Item Link</a>
+								<div class="end-links">
+									<a href="#1">1</a>
+									<a href="#2">2</a>
+								</div>
+							</li>
+							<li class="list-box__list-item">
+								<div class="icon">
+									<img src="img/git.svg" alt="status icon" />
+								</div>
+								<a href="#item1" class="main-link">Item Link</a>
+								<div class="end-links">
+									<a href="#1">1</a>
+									<a href="#2">2</a>
+								</div>
+							</li>
+							<li class="list-box__list-item">
+								<div class="icon">
+									<img src="img/git.svg" alt="status icon" />
+								</div>
+								<a href="#item1" class="main-link">Item Link</a>
+								<div class="end-links">
+									<a href="#1">1</a>
+									<a href="#2">2</a>
+								</div>
+							</li>
+							<li class="list-box__list-item">
+								<div class="icon">
+									<img src="img/git.svg" alt="status icon" />
+								</div>
+								<a href="#item1" class="main-link">Item Link</a>
+								<div class="end-links">
+									<a href="#1">1</a>
+									<a href="#2">2</a>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</main>
+			<footer>FOOTER</footer>
+		</div>
 	</body>
 	<script src="app.js"></script>
 </html>
